bnf.txt
<program>		= <statement>*
<statement>		= <expr> ";"
<expr>			= <assign>
<assign>		= <equality> ("=" assign)?
<equality> 		= <inequality> ("==" <inequality> | "!=" <inequality>)*
<inequality> 	= <polynomial> ("<" <polynomial> | "<=" <polynomial> | ">" <polynomial> | ">=" <polynomial>)*
<polynomial> 	= ("+" <term> | "-" <term>)*
<term> 			= <sign> ("*" <sign> | "/" <sign>)*
<sign> 			= ("+" | "-")? <factor>
<factor> 		= NUMBER | IDENTIFIER | "(" <expr> ")"
